nav-bar alignment fix

--- a/project-2/style.css
+++ b/project-2/style.css
@@ -1,36 +1,36 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+padding:0;
 }
 
-.wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(-135deg, #c850c0, #4158d0);
-    clip-path: circle(25px at calc(100% - 45px) 45px);
-    transition: all 0.3s ease-in-out;
+.wrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(-135deg, #ffffff, #092147);
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+  /* clip-path: circle(25px at calc(0% + 45px) 45px); */
+  clip-path: circle(25px at calc(100% - 45px) 45px);
+  transition: all 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+
 }
 
-#active:checked~.wrapper {
-    clip-path: circle(75%);
-}
+#active:checked ~ .wrapper{
+  clip-path: circle(75%);}
+  
 
-.menu-btn {
+  .menu-btn{
     position: absolute;
     z-index: 2;
     right: 20px;
+    /* left: 20px; */
     top: 20px;
     height: 50px;
     width: 50px;
@@ -40,33 +40,30 @@
     font-size: 20px;
     color: #fff;
     cursor: pointer;
-    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    background: linear-gradient(-135deg, #ffffff, #092147);
+    /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
     transition: all 0.3s ease-in-out;
-}
-
-#active:checked~.menu-btn {
+  }
+  #active:checked ~ .menu-btn{
     background: #fff;
-    color: #4158d0;
-}
-
-#active:checked~.menu-btn i:before {
+    color: #FFA500;
+  }
+  #active:checked ~ .menu-btn i:before{
     content: "\f00d";
-}
-
-.wrapper ul {
+  }
+  .wrapper ul{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
-}
-
-.wrapper ul li {
+  }
+  .wrapper ul li{
     margin: 15px 0;
-}
-
-.wrapper ul li a {
+  }
+  .wrapper ul li a{
+    color: none;
     text-decoration: none;
     font-size: 30px;
     font-weight: 500;
@@ -75,12 +72,11 @@
     position: relative;
     line-height: 50px;
     transition: all 0.3s ease;
-}
-
-.wrapper ul li a:after {
+  }
+  .wrapper ul li a:after{
     position: absolute;
-    content: "";
-    background: #fff;
+    content:;
+    background: #092147;
     width: 100%;
     height: 50px;
     left: 0;
@@ -88,53 +84,34 @@
     transform: scaleY(0);
     z-index: -1;
     transition: transform 0.3s ease;
-}
-
-.wrapper ul li a:hover:after {
+  }
+  .wrapper ul li a:hover:after{
     transform: scaleY(1);
-}
-
-.wrapper ul li a:hover {
-    color: #4158d0;
-}
-
-input[type="checkbox"] {
+  }
+  .wrapper ul li a:hover{
+    color: #FFA500;
+  }
+  input[type="checkbox"]{
     display: none;
-}
+  }
 
-.content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-    text-align: center;
-    width: 100%;
-    color: #202020;
-}
 
-.content .title {
-    font-size: 40px;
-    font-weight: 700;
-}
-
-.content p {
-    font-size: 35px;
-    font-weight: 600;
-}
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: oswald;
   color: #ffffff;
   background: linear-gradient(to bottom, #97B2DF, #092147);
 }
 
 
 .nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px; /* Adjust padding as needed */
   background-color: #092147;
   color: white;
-  padding: 10px;
   position: fixed;
   width: 100%;
   top: 0;
@@ -142,17 +119,21 @@ body {
 }
 
 .menu-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex: 1;
+  text-align: right; /* Align the menu to the right */
 }
 
-.menu-bar-links {
-  list-style-type: none;
+.menu-bar li {
+  margin-right: 20px;
+}
+
+.menu-bar ul {
+  list-style: none;
+  display: flex;
   margin: 0;
   padding: 0;
-  color: #000;
 }
+
 
 #navlist {
   display: flex;
@@ -162,15 +143,21 @@ body {
 #navlist li {
   margin-right: 20px;
 }
+.logo{
+  flex: 1;
+}
 
 .logo img {
-  height: 70px;
+  max-height: 50px;
+}
+
+.clock-location  {
+  flex:-1;
 }
 
 .clock-location img {
-  height: 30px;
+  max-height: 30px; /* Set a max height for the clock image */
 }
-
 /* Hero Image Styles */
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
